[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/vr-controllers/ThumbBase.gd" type="Script" id=1]
[ext_resource path="res://general/toon-shader/toon.gdshader" type="Shader" id=2]
[ext_resource path="res://general/toon-shader/MinimumOutline.tres" type="Material" id=3]

[sub_resource type="SphereMesh" id=4]
radius = 0.01
height = 0.02
radial_segments = 16
rings = 8

[sub_resource type="ShaderMaterial" id=7]
next_pass = ExtResource( 3 )
shader = ExtResource( 2 )
shader_param/shaded = true
shader_param/shadows = true
shader_param/lighting_color = true
shader_param/specular_reflection = true
shader_param/rim_light = true
shader_param/albedo_color = Color( 0.360784, 1, 0, 1 )
shader_param/specular_tint = Color( 0.75, 0.75, 0.75, 0.75 )
shader_param/rim_tint = Color( 0.75, 0.75, 0.75, 0.75 )
shader_param/shade_softness = 0.01
shader_param/shadow_softness = 0.1
shader_param/shadowed_energy = 0.0
shader_param/specular_glossiness = 15.0
shader_param/specular_threshold = 0.5
shader_param/specular_softness = 0.1
shader_param/rim_threshold = 0.25
shader_param/rim_softness = 0.05
shader_param/rim_spread = 0.5
shader_param/light_contribution = 1.0

[sub_resource type="SphereShape" id=6]
radius = 0.01

[node name="ThumbBase" type="Spatial"]
script = ExtResource( 1 )

[node name="Thumb" type="Area" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Thumb"]
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="CollisionPolygon" type="CollisionShape" parent="Thumb"]
shape = SubResource( 6 )

[node name="AXPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00536878, -0.0226885, 0.00826548 )

[node name="BYPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0114349, -0.0249557, -0.00729807 )

[node name="RestPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0244226, -0.00566837 )

[connection signal="area_entered" from="Thumb" to="." method="_on_touching_area"]
[connection signal="area_exited" from="Thumb" to="." method="_on_leaving_area"]
